# puppet-openstackci

./: .gitignore  .gitreview  CONTRIBUTING.rst  Gemfile  README.md  metadata.json  other-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
contrib/: README.md  hiera.yaml  log_server_data.yaml  log_server_site.pp  single_node_ci_data.yaml  single_node_ci_heira.yaml  single_node_ci_hiera.yaml  single_node_ci_site.pp  single_node_site.pp
doc/source/: conf.py  index.rst  third_party_ci.rst
files/: log_archive_maintenance.sh  os-loganalyze-file_conditions.yaml  wsgi_sqlite.py
manifests/: elasticsearch_node.pp  graphite.pp  jenkins_job_builder.pp  jenkins_master.pp  logserver.pp  logstash.pp  logstash_worker.pp  mirror.pp  nodepool.pp  nodepool_builder.pp  nodepool_launcher.pp  puppetdb.pp  sample_ci.pp  single_node_ci.pp  subunit_worker.pp  zuul_launcher.pp  zuul_merger.pp  zuul_scheduler.pp  zuul_scheduler2.pp
spec/: spec_helper_acceptance.rb
spec/acceptance/: basic_nova_spec.rb  basic_spec.rb  nodepool_builder_spec.rb  nodepool_launcher_spec.rb
spec/acceptance/fixtures/: default.pp  default_rh.pp
spec/acceptance/fixtures/nodepool/: builder-postconditions.pp  builder-preconditions.pp  builder.pp  launcher-postconditions.pp  launcher-preconditions.pp  launcher.pp
templates/: be.certipost.hudson.plugin.SCPRepositoryPublisher.xml.erb  logs-dev.vhost.erb  logs.vhost.erb  mirror.vhost.erb  os-loganalyze-file_conditions.yaml.erb  os-loganalyze-wsgi.conf.erb  os-loganalyze.conf.erb
test/: test_jenkinsmaster.sh  test_logserver.sh
